# wekeo_competition_2022

./: .gitignore  functions.ipynb  geobia.ipynb  pyproject.toml  requirements.txt  requirements2.txt
.ipynb_checkpoints/: functions-checkpoint.ipynb
data/: concise.tif  concise.tif.aux.xml  training.gpkg
