[tool.poetry]
name = "notebook_competition"
version = "0.1.0"
description = "Wekeo Jupyter Notebook Competition"
authors = ["chikaj <ncurrit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
geopandas = "0.11.1"
hda = "0.2.2"
matplotlib = "3.5.2"
pandas = "1.4.3"
rasterio = "1.3.0"
rasterstats = "0.17.0"
scikit-image = "0.19.3"
scikit-learn = "1.1.1"
scipy = "1.8.1"
jupyterlab = "3.4.4"
Cartopy = "^0.20.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
